--- a/T1/Galochas.html
+++ b/T1/Galochas.html
@@ -1,10 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title> Uma conversa obre Galochas </title>
+	<title> Uma conversa sobre Galochas </title>
+	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 	<meta charset= "UTF-8"/>
 </head>
 <body>
-	
+<div style="margin: 25px">
+	<div class="w3-card w3-green">
+		<h2><b>Será que as galochas são o calçado ideal ?</b></h2>
+	</div>
+	<div class="w3-row">
+		<div class="w3-col m6 l6">
+			<div class="w3-card w3-yellow">
+				<div style="margin: 10px">
+					<p>Estudos vieram a mostrar que comparativamente a botas normais,estas têm de facto um uso mais prático devido a serem o melhor calçado para previnir pés molhados;</p>
+				</div>
+			</div>
+		</div>
+		<div class="w3-col m6 l6">
+			<div class="w3-card w3-orange">
+				<div style="margin: 10px">
+					<p>Mas em contrapartida as variedades diferentes de botas <i>(à exceção de galochas)</i> vieram a provar-se grandes competitoras na moda, o que torna esta discussão num dilema de <span style="color: blue">uso prático</span> <b>vs</b> <span style="color: red">beleza</span>.</p>
+				</div>
+			</div>
+		</div>
+	</div>
+</div> 
 </body>	
 </html>
