--- a/T1/Galochas.html
+++ b/T1/Galochas.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title> Uma conversa sobre Galochas </title>
-	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"/>
 	<meta charset= "UTF-8"/>
 </head>
 <body>
@@ -12,18 +12,30 @@
 	</div>
 	<div class="w3-row">
 		<div class="w3-col m6 l6">
-			<div class="w3-card w3-yellow">
+			<div class="w3-card w3-orange">
 				<div style="margin: 10px">
 					<p>Estudos vieram a mostrar que comparativamente a botas normais,estas têm de facto um uso mais prático devido a serem o melhor calçado para previnir pés molhados;</p>
 				</div>
 			</div>
 		</div>
 		<div class="w3-col m6 l6">
-			<div class="w3-card w3-orange">
+			<div class="w3-card w3-yellow">
 				<div style="margin: 10px">
 					<p>Mas em contrapartida as variedades diferentes de botas <i>(à exceção de galochas)</i> vieram a provar-se grandes competitoras na moda, o que torna esta discussão num dilema de <span style="color: blue">uso prático</span> <b>vs</b> <span style="color: red">beleza</span>.</p>
 				</div>
 			</div>
+		</div>
+	</div>
+	<div class="w3-card w3-blue">
+		<div style="margin: 10px">
+			<b>Autor :</b> <i>Bruno Antunes</i> 
+		</div>
+	</div>
+	<div class="w3-card w3-cyan">
+		<div style="margin: 10px">
+			<h4><b>Bibliografia</b></h4> 
+			<p>Para ficar a saber o que é uma galocha visite <a href="https://pt.wikipedia.org/wiki/Glocha"><span style="color: white">este site</span></a>.</p>
+			<p>Se tem alguma dúvida, é recomendado procurar por tal dúvida ou no site <span style="color: green"><a href="https://www.google.pt">Google</a></span> ou no <span style="color: red"><a href="https://www.youtube.pt">Youtube</a></span>.</p> 
 		</div>
 	</div>
 </div> 
